# rre-burp

./: .gitignore  PROJECT_STRUCTURE.md  README.md  pyproject.toml  requirements_api.txt  requirements_langchain.txt  test_api.py  test_har_analysis.py  test_video_discovery.py
data/: test_sites.json
docs/: README_ENHANCED_RRE.md  README_LANGCHAIN.md  README_SITE_EXPLORER.md  README_VIDEO_DISCOVERY.md
src/: __init__.py  run_api_server.py  site_explorer_cli.py  video_discovery_cli.py
src/analysis/: __init__.py  security_evaluator.py  security_metrics.py  security_scorer.py  threat_modeling.py  vulnerability_detector.py
src/api/: __init__.py  routes.py  server.py
src/config/: __init__.py  site_explorer_config.py
src/cookie_consent/: __init__.py  cookie_handler.py  models.py
src/examples/: __init__.py  compare_approaches.py  demo_langchain_rre.py  demo_site_explorer.py  test_video_detection.py
src/langchain_integration/: __init__.py  config_langchain.py  langchain_rre.py
src/rre_core/: __init__.py  har_collect.py  rre_enhanced.py  rre_explore.py  rre_intelligent_analyzer.py  rre_standalone.py
src/site_explorer/: __init__.py  intelligent_explorer.py
src/tests/: __init__.py  test_langchain_integration.py
src/utils/: __init__.py  web_helpers.py
src/video_discovery/: __init__.py  models.py  video_discoverer.py
